--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ num_enum = "0.5.1"
 solana-program = "1.5.14"
 thiserror = "1.0"
 borsh = "0.8.2"
+rkyv = "0.4.3"
 
 [dev-dependencies]
 solana-program-test = "1.5.14"
